crates/ars-components/src/date_time/date_time_picker/snapshots/ars_components__date_time__date_time_picker__tests__control_described.snap
---
source: crates/ars-components/src/date_time/date_time_picker/tests.rs
expression: snapshot_attrs(&api.control_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "control",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-time-picker",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "date-time-picker-label",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "date-time-picker-description date-time-picker-error-message",
            ),
        ),
        (
            Id,
            String(
                "date-time-picker-control",
            ),
        ),
        (
            Role,
            String(
                "group",
            ),
        ),
    ],
    styles: [],
}
