crates/ars-components/src/date_time/date_time_picker/snapshots/ars_components__date_time__date_time_picker__tests__label.snap
---
source: crates/ars-components/src/date_time/date_time_picker/tests.rs
expression: snapshot_attrs(&api.label_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-time-picker",
            ),
        ),
        (
            Id,
            String(
                "date-time-picker-label",
            ),
        ),
    ],
    styles: [],
}
